--- a/project/app/src/main/res/layout/activity_detailed.xml
+++ b/project/app/src/main/res/layout/activity_detailed.xml
@@ -69,14 +69,14 @@
         android:id="@+id/detailActivityAddToCartBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/black"
         android:text="Add to Cart"
         android:textAllCaps="false"
-        android:textSize="17sp"
-        android:background="@color/black"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/recommended_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -92,5 +92,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/detailActivityProductSoldByTv"
         app:layout_constraintTop_toTopOf="@+id/detailActivityProductNameTv" />
+
+    <TextView
+        android:id="@+id/recommended_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/recommended_text"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailActivityAddToCartBtn" />
+
+    <Button
+        android:id="@+id/recommended_button"
+        android:layout_width="206dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="15dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/recommended_textview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
