--- a/project/app/src/main/res/layout/activity_detailed.xml
+++ b/project/app/src/main/res/layout/activity_detailed.xml
@@ -70,7 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        android:text="Add to Cart"
+        android:text="@string/add_to_cart"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="17sp"
