--- a/project/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/project/app/src/main/res/layout/activity_shopping_cart.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="16dp"
-        android:text=" Total :"
+        android:text="@string/total"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        android:text="Checkout"
+        android:text="@string/checkout"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="17sp"
@@ -78,7 +78,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Your Order has been placed"
+                android:text="@string/your_order_has_been_placed"
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 android:textStyle="bold"
