--- a/project/app/src/main/res/layout/viewed_items.xml
+++ b/project/app/src/main/res/layout/viewed_items.xml
@@ -2,10 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/viewItemCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
-    android:id="@+id/viewedCard"
     android:layout_marginTop="12dp"
     app:cardElevation="8dp">
 
@@ -57,50 +57,6 @@
             app:layout_constraintStart_toEndOf="@+id/viewedImage"
             app:layout_constraintTop_toBottomOf="@+id/viewedBrand" />
 
-        <ImageView
-            android:id="@+id/eachCartItemDeleteBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
-
-        <ImageButton
-            android:id="@+id/eachCartItemAddQuantityBtn"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="12dp"
-            android:background="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_baseline_add_24" />
-
-        <TextView
-            android:id="@+id/eachCartItemQuantityTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:text="1"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/eachCartItemMinusQuantityBtn"
-            app:layout_constraintEnd_toStartOf="@+id/eachCartItemAddQuantityBtn"
-            app:layout_constraintTop_toTopOf="@+id/eachCartItemMinusQuantityBtn" />
-
-        <ImageButton
-            android:id="@+id/eachCartItemMinusQuantityBtn"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="12dp"
-            android:background="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/eachCartItemQuantityTV"
-            app:srcCompat="@drawable/ic_baseline_remove_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
